# gather-scatter-eval

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
data/: log___threaded_benchmark_agg___1705578022  log___threaded_benchmark_agg___1705578031
data/gather/: plot.gnu
include/: aggregation_type.h  allocate.cpp  benchmark_single_threaded.cpp  create_thread.cpp  error_codes.h  generate_random_values.cpp  log_multithreaded_results.cpp  make_label.cpp  measures.h  parameters.h
include/gather/: aggregate_scalar.cpp
include/gather/simd_variants/avx/: agg_avx_32BitVariants.h  agg_avx_64BitVariants.h
include/gather/simd_variants/avx512/: agg_avx512_32BitVariants.h  agg_avx512_64BitVariants.h
src/gather/multi_threaded/: benchmark_agg_avx512_32bit.cpp  benchmark_agg_avx512_64bit.cpp  benchmark_agg_avx_32bit.cpp  benchmark_agg_avx_64bit.cpp  common.cpp
src/gather/single_threaded/: benchmark_agg_avx512_32bit.cpp  benchmark_agg_avx512_64bit.cpp  benchmark_agg_avx_32bit.cpp  benchmark_agg_avx_64bit.cpp  common.cpp
